--- a/sass/partials/sections/_contact.scss
+++ b/sass/partials/sections/_contact.scss
@@ -1,10 +1,9 @@
 .contact-wrapper {
-    @media screen and (min-width: $break-xxs) { //Extra-extra Small
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-    }
+        width: 100%;
     @media screen and (min-width: $break-sm) { //Small
         height: 100vh;
         background-image: linear-gradient(to top right, $light-blue, $dark-blue);
@@ -29,13 +28,15 @@
     @media screen and (min-width: $break-sm) { //Small
         width: 90vw;
     }   
-    @media screen and (min-width: $break-lg) { //large
+    @media screen and (min-width: $break-lg) { 
         width: 90%;
-        height: 80%;
+        height: 70%;
     }
-    @media screen and (min-width: $break-xl) { //Xlarge
+    @media screen and (min-width: $break-xl) { 
+        width: 80%;
+    }
+    @media screen and (min-width: $break-xxl) { 
         width: 60%;
-        height: 80%;
     }
     border-radius: 2rem;
     background-color: rgba(241,241,230,0.9);
@@ -144,6 +145,11 @@
         }
         @media screen and (min-width: $break-lg) { //large
             margin-left: 80px;
+            padding: 1rem;
+        }
+        @media screen and (min-width: $break-xl) { //large
+            margin-left: 80px;
+            margin-top: 1rem;
             padding: 1rem;
         }
         background-color: $light-blue;
